fix(footer): updated footer styles and added spacing and text width

--- a/css/styles.css
+++ b/css/styles.css
@@ -286,9 +286,11 @@ section {
 
 /* #region Portfolio section */
 .portfolio {
+  padding-top: 120px 0;
 }
 
 .portfolio-title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -299,15 +301,27 @@ section {
 }
 
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-item {
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-img {
 }
 
+.portfolio-item-info {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .portfolio-item-title {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -325,10 +339,13 @@ section {
 
 /* #region Footer */
 .footer {
+  padding: 100px 0;
   background-color: #2e2f42;
 }
 
 .footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -343,6 +360,7 @@ section {
 }
 
 .footer-text {
+  max-width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
